--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
-    "element-ui": "^2.11.1",
+    "element-ui": "^2.12.0",
     "lodash": "^4.17.15",
     "mockjs": "^1.0.1-beta3",
     "normalize.css": "^8.0.1",
@@ -24,6 +24,7 @@
     "@vue/cli-service": "^3.10.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
+    "copy-webpack-plugin": "^5.0.4",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.12.0",
