--- a/package.json
+++ b/package.json
@@ -8,27 +8,27 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "core-js": "^2.6.5",
-    "element-ui": "^2.12.0",
-    "lodash": "^4.17.15",
-    "mockjs": "^1.0.1-beta3",
+    "axios": "^0.19.2",
+    "core-js": "^2.6.11",
+    "element-ui": "^2.13.2",
+    "lodash": "^4.17.19",
+    "mockjs": "^1.1.0",
     "normalize.css": "^8.0.1",
-    "vue": "^2.6.10",
-    "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vue": "^2.6.11",
+    "vue-router": "^3.3.4",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.10.0",
     "@vue/cli-plugin-eslint": "^3.10.0",
     "@vue/cli-service": "^3.10.0",
     "@vue/eslint-config-standard": "^4.0.0",
-    "babel-eslint": "^10.0.1",
-    "copy-webpack-plugin": "^5.0.4",
-    "node-sass": "^4.12.0",
+    "babel-eslint": "^10.1.0",
+    "copy-webpack-plugin": "^5.1.1",
     "eslint": "^6.8.0",
-    "eslint-plugin-vue": "^6.1.2",
-    "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.6.10"
+    "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^7.3.1",
+    "vue-template-compiler": "^2.6.11"
   }
 }
