--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "core-js": "^2.6.11",
-    "element-ui": "^2.13.2",
+    "element-ui": "^2.14.1",
     "lodash": "^4.17.19",
     "mockjs": "^1.1.0",
     "normalize.css": "^8.0.1",
@@ -27,8 +27,8 @@
     "copy-webpack-plugin": "^5.1.1",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.14.1",
-    "sass-loader": "^7.3.1",
+    "less": "^4.0.0",
+    "less-loader": "^7.2.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
