--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 .DS_Store
 node_modules
 /dist
-package-lock.json
+
+
 # local env files
 .env.local
 .env.*.local
@@ -10,6 +11,7 @@ package-lock.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # Editor directories and files
 .idea
